<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?attr/colorPrimary"
        android:orientation="horizontal"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/toolBarStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/cardMonday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="1"
                app:cardElevation="@dimen/dimen_6dp">

                <RelativeLayout
                    android:id="@+id/rLayoutMonday"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/lightPink">

                    <ImageView
                        android:id="@+id/imgBookMark1"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:src="@drawable/ic_book_mark"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/imgMonday"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:src="@drawable/monday" />

                    <TextView
                        android:id="@+id/txtMonday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:gravity="center_horizontal"
                        android:text="@string/monday"
                        android:textColor="@color/colorBlack"
                        android:textSize="16dp"
                        android:textStyle="bold" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardTuesday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="1">


                <RelativeLayout
                    android:id="@+id/rLayoutTuesday"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/lightPink">

                    <ImageView
                        android:id="@+id/imgBookMark2"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:src="@drawable/ic_book_mark"
                        android:visibility="gone" />


                    <ImageView
                        android:id="@+id/imgTuesday"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_above="@+id/txtTuesday"
                        android:src="@drawable/tuesday" />

                    <TextView
                        android:id="@+id/txtTuesday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:gravity="center_horizontal"
                        android:text="@string/tuesday"
                        android:textColor="@color/colorBlack"
                        android:textSize="16dp"
                        android:textStyle="bold" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardWednesday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/rLayoutWednesday"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/lightPink">

                    <ImageView
                        android:id="@+id/imgBookMark3"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:src="@drawable/ic_book_mark"
                        android:visibility="gone" />


                    <ImageView
                        android:id="@+id/imgWednesday"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_above="@+id/txtWednesday"
                        android:src="@drawable/wednesday" />

                    <TextView
                        android:id="@+id/txtWednesday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:gravity="center_horizontal"
                        android:text="@string/wednesday"
                        android:textColor="@color/colorBlack"
                        android:textSize="16dp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/cardThursday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/rLayoutThursday"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/lightPink">

                    <ImageView
                        android:id="@+id/imgBookMark4"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:src="@drawable/ic_book_mark"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/imgThursday"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_above="@+id/txtThursday"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:src="@drawable/thursday" />

                    <TextView
                        android:id="@+id/txtThursday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:gravity="center_horizontal"
                        android:text="@string/thursday"
                        android:textColor="@color/colorBlack"
                        android:textSize="16dp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardFriday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/rLayoutFriday"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/lightPink">

                    <ImageView
                        android:id="@+id/imgBookMark5"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:src="@drawable/ic_book_mark"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/imgFriday"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/imgBookMark5"
                        android:src="@drawable/friday" />

                    <TextView
                        android:id="@+id/txtFriday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:gravity="center_horizontal"
                        android:text="@string/friday"
                        android:textColor="@color/colorBlack"
                        android:textSize="16dp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardSaturday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/rLayoutSaturday"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/lightPink">

                    <ImageView
                        android:id="@+id/imgBookMark6"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:src="@drawable/ic_book_mark"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/imgSaturday"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_above="@+id/txtSaturday"
                        android:src="@drawable/saturday" />

                    <TextView
                        android:id="@+id/txtSaturday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:gravity="center_horizontal"
                        android:text="@string/saturday"
                        android:textColor="@color/colorBlack"
                        android:textSize="16dp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/cardSunday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                app:cardElevation="@dimen/dimen_6dp">

                <RelativeLayout
                    android:id="@+id/rLayoutSunday"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/lightPink">

                    <ImageView
                        android:id="@+id/imgBookMark7"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:src="@drawable/ic_book_mark"
                        android:visibility="gone" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_above="@+id/txtSunday"
                        android:layout_marginTop="@dimen/dimen_4dp"
                        android:src="@drawable/sunday" />

                    <TextView
                        android:id="@+id/txtSunday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:gravity="center_horizontal"
                        android:text="@string/sunday"
                        android:textColor="@color/colorBlack"
                        android:textSize="16dp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>